# FastAPI-template

./: .gitignore  README.md  pyproject.toml
scripts/: __init__.py  lint.py  start.py  test.py  type.py
