[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "scripts", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
starlette = "0.37.2"
pydantic = "^2.8.2"
uvicorn = "^0.30.5"
ipython = "^8.26.0"
ipykernel = "^6.29.5"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
black = "^24.8.0"
flake8 = "^7.1.0"
bandit = "^1.7.9"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
pytest-httpx-blockage = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
type = "scripts:type"
lint = "scripts:lint"
test = "scripts:test"
start = "scripts:start"

